test/conformance/chainsaw/validate/clusterpolicy/standard/emit-warning/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
spec:
  containers:
  - name: nginx
    image: nginx:latest
