test/conformance/chainsaw/validate/clusterpolicy/standard/emit-warning/policy-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: check-label-app
